syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "closetrpc_types.proto";

package nano_messanger;

option csharp_namespace = "NanoMessanger";

message RegistrationData {
	string username = 1;
	string password = 2;
	string email = 3;
	string firstName = 4;
	string lastName = 5;
}

message AuthenticationData {
	string username = 1;
	string password = 2;
}

message SessionInfo {
	string sessionKey = 1;
}

service SessionEvents {
	option(nanorpc.event_source) = true;

	rpc SessionExpired (google.protobuf.Empty) returns (google.protobuf.Empty);
}

service LoginService {
	rpc Register (RegistrationData) returns (google.protobuf.BoolValue);
	rpc Login (AuthenticationData) returns (SessionInfo);
	rpc Logout (google.protobuf.Empty) returns (google.protobuf.BoolValue);
	rpc ChangeAuthenticationInfo (RegistrationData) returns (google.protobuf.BoolValue);
	rpc Reconnect (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}

message ContactInfo {
	string firstName = 1;
	string lastName = 2;
	string username = 3;
	bool is_online = 4;
}

message ContactList {
	repeated ContactInfo Contacts = 1;
}

service ContactListService {
	rpc FindUser (google.protobuf.StringValue) returns (ContactList);
	rpc AddContact (ContactInfo) returns (google.protobuf.Empty);
	rpc RemoveContact (google.protobuf.StringValue) returns (google.protobuf.Empty);
	rpc GetContacts (google.protobuf.Empty) returns (ContactList);
}

message Message {
	string username = 1;
	string text = 2;
	int32 ordinal = 3;
}

message MessageList {
	repeated Message Messages = 1;
}

service MessageEvents {
	option(nanorpc.event_source) = true;

	rpc NewMessage (google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc OnlineStatusChanged (ContactInfo) returns (google.protobuf.Empty);
}

service MessageService {
	rpc SendMessage (Message) returns (google.protobuf.Empty);
	rpc GetPendingMessages(google.protobuf.Int32Value) returns (MessageList);
}
